--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "make-a-fortune",
   "version": "1.0.0",
   "description": "Web portal of Wukegenggao",
-  "main": "index.js",
   "repository": "https://github.com/skyzh/make-a-fortune",
   "author": "Alex Chi",
   "license": "MIT",
@@ -11,21 +10,28 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
-    "parcel-bundler": "^1.12.5",
+    "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
+    "@parcel/transformer-sass": "2.0.0-nightly.637",
+    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.637",
+    "parcel": "^2.0.0-nightly.635",
+    "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "axios": "^0.21.1",
     "bootstrap-icons": "^1.4.1",
     "framer-motion": "^4",
-    "parcel": "^2.0.0-beta.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "use-persisted-state": "^0.3.3",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "parcel serve ./src/index.html --hmr-port 1235",
-    "build": "parcel build ./src/index.html"
+    "build": "parcel build ./src/index.html --reporter @parcel/reporter-bundle-analyzer"
   }
 }
