--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@parcel/transformer-sass": "2.0.0-nightly.637",
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.637",
     "parcel": "^2.0.0-nightly.635",
+    "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
@@ -32,6 +33,9 @@
   },
   "scripts": {
     "start": "parcel serve ./src/index.html --hmr-port 1235",
-    "build": "parcel build ./src/index.html --reporter @parcel/reporter-bundle-analyzer"
+    "build": "parcel build ./src/index.html --reporter @parcel/reporter-bundle-analyzer",
+    "type-check": "tsc --noEmit --watch",
+    "lint": "prettier --check src/",
+    "format": "prettier --write src/"
   }
 }
