--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
     "@parcel/transformer-sass": "2.0.0-nightly.637",
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.637",
+    "@types/lodash": "^4.14.168",
     "parcel": "^2.0.0-nightly.635",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
@@ -25,9 +26,11 @@
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.4.1",
     "framer-motion": "^4",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.31.0",
     "react-router-dom": "^5.2.0",
     "use-persisted-state": "^0.3.3",
     "uuid": "^8.3.2"
