--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.637",
     "@types/lodash": "^4.14.168",
     "parcel": "^2.0.0-nightly.635",
+    "parcel-plugin-custom-dist-structure": "^1.1.17",
     "prettier": "^2.2.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
