--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/lodash": "^4.14.168",
     "parcel": "^2.0.0-nightly.635",
     "prettier": "^2.2.1",
+    "prettier-plugin-organize-imports": "^1.1.1",
     "sass": "^1.32.8",
     "typescript": "^4.2.3"
   },
