--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.4.1",
     "framer-motion": "^4",
+    "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
