fix some type errors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
     "@parcel/transformer-sass": "2.0.0-nightly.638",
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.638",
+    "@parcel/validator-typescript": "^2.0.0-nighly.638",
     "@types/lodash": "^4.14.168",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
     "parcel": "^2.0.0-nightly.635",
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
