--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
+    "@types/use-persisted-state": "^0.3.0",
     "@types/uuid": "^8.3.0",
     "parcel": "^2.0.0-nightly.635",
     "prettier": "^2.2.1",
