standalone app on ios

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
+    "@parcel/packager-raw-url": "2.0.0-nightly.2260",
     "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
     "@parcel/transformer-sass": "2.0.0-nightly.638",
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.638",
+    "@parcel/transformer-webmanifest": "2.0.0-nightly.2260",
     "@parcel/validator-typescript": "^2.0.0-nighly.638",
     "@types/lodash": "^4.14.168",
     "@types/react": "^17.0.3",
