--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prettier": "^2.2.1",
     "prettier-plugin-organize-imports": "^1.1.1",
     "sass": "^1.32.8",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "vercel": "^21.3.3"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.4.2",
@@ -51,6 +52,7 @@
     "build": "parcel build ./src/index.html --reporter @parcel/reporter-bundle-analyzer --no-scope-hoist",
     "type-check": "tsc --noEmit --watch",
     "lint": "prettier --check src/",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "vercel-dev": "vercel dev --listen 1234"
   }
 }
