--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,5 @@
 {
-  "version": 2,
-  "routes": [
-    {
-      "src": "(.*)\\.js$",
-      "dest": "$1.js"
-    },
-    {
-      "src": "(.*)\\.css$",
-      "dest": "$1.css"
-    },
-    {
-      "src": "(.*)\\.map$",
-      "dest": "$1.map"
-    },
-    {
-      "src": "(.*)\\.woff$",
-      "dest": "$1.woff"
-    },
-    {
-      "src": "(.*)\\.woff2$",
-      "dest": "$1.woff2"
-    },
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
-    },
-    {
-      "src": ".*",
-      "dest": "/index.html"
-    }
-  ],
+  "rewrites": [{ "source": "//((?!api/.*).*)", "destination": "/index.html" }],
   "github": {
     "silent": true
   }
