--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vercel/node": "^1.9.1",
     "axios": "^0.21.1",
     "bootstrap-icons": "^1.4.1",
+    "fonts.css": "^2.0.0",
     "framer-motion": "^4",
     "jsbi": "^3.1.4",
     "lodash": "^4.17.21",
