--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.638",
     "@parcel/validator-typescript": "^2.0.0-nighly.638",
     "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
