feat: use yarn v2

--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,11 @@ dist/
 .cache/
 .vscode/
 .parcel-cache/
-
-.vercel
+.vercel/
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
