--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@babel/core": "^7.13.14",
     "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.13.13",
-    "@parcel/packager-raw-url": "2.0.0-nightly.2260",
+    "@chakra-ui/react-utils": "^1.1.1",
+    "@parcel/config-default": "nightly",
+    "@parcel/packager-raw-url": "nightly",
     "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
-    "@parcel/transformer-sass": "2.0.0-nightly.638",
+    "@parcel/transformer-sass": "nightly",
     "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.638",
-    "@parcel/transformer-webmanifest": "2.0.0-nightly.2260",
+    "@parcel/transformer-webmanifest": "^2.0.0-nightly.2186",
     "@parcel/validator-typescript": "^2.0.0-nighly.638",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.37",
