initial commit for v3
Signed-off-by: Alex Chi <iskyzh@gmail.com>

--- a/package.json
+++ b/package.json
@@ -1,61 +1,49 @@
 {
   "name": "make-a-fortune",
   "version": "1.0.0",
-  "description": "Web portal of Wukegenggao",
+  "description": "Web portal of treehole.space",
   "repository": "https://github.com/skyzh/make-a-fortune",
   "author": "Alex Chi",
   "license": "MIT",
   "private": true,
-  "devDependencies": {
-    "@babel/core": "^7.13.14",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.13.13",
-    "@parcel/packager-raw-url": "2.0.0-nightly.2260",
-    "@parcel/reporter-bundle-analyzer": "^2.0.0-nightly.1694",
-    "@parcel/transformer-sass": "2.0.0-nightly.638",
-    "@parcel/transformer-typescript-tsc": "^2.0.0-nightly.638",
-    "@parcel/transformer-webmanifest": "2.0.0-nightly.2260",
-    "@parcel/validator-typescript": "^2.0.0-nighly.638",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/use-persisted-state": "^0.3.0",
-    "@types/uuid": "^8.3.0",
-    "parcel": "^2.0.0-nightly.635",
-    "prettier": "^2.2.1",
-    "prettier-plugin-organize-imports": "^1.1.1",
-    "sass": "^1.32.8",
-    "typescript": "^4.2.3",
-    "vercel": "^21.3.3"
-  },
+  "main": "src/App.tsx",
   "dependencies": {
-    "@chakra-ui/react": "^1.4.2",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@vercel/node": "^1.9.1",
-    "axios": "^0.21.1",
-    "bootstrap-icons": "^1.4.1",
-    "fonts.css": "^2.0.0",
-    "framer-motion": "^4",
-    "jsbi": "^3.1.4",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-intersection-observer": "^8.31.0",
-    "react-process-string": "^1.2.0",
-    "react-router-dom": "^5.2.0",
-    "use-persisted-state": "^0.3.3",
-    "uuid": "^8.3.2"
+    "expo": "~42.0.0",
+    "native-base": "^3.1.0",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5"
+  },
+  "devDependencies": {
+    "@babel/core": "~7.9.0",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^2.3.2",
+    "typescript": "~4.0.0"
   },
   "scripts": {
-    "start": "parcel serve ./src/index.html --hmr-port 1235",
-    "build": "parcel build ./src/index.html --reporter @parcel/reporter-bundle-analyzer --no-scope-hoist",
-    "type-check": "tsc --noEmit --watch",
-    "lint": "prettier --check src/",
-    "format": "prettier --write src/",
-    "vercel-dev": "vercel dev --listen 1234"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "lint": "eslint src/",
+    "format": "eslint --fix src/",
+    "build": "expo build:web"
   }
 }
