--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,4 @@
 {
-  "compilerOptions": {
-    "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react",
-    "baseUrl": ".",
-    "paths": {
-      "~*": ["./*"]
-    }
-  },
-  "include": ["src/**/*"]
+  "compilerOptions": {},
+  "extends": "expo/tsconfig.base"
 }
