util: change title
Signed-off-by: Alex Chi <iskyzh@gmail.com>

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "fortune",
+    "name": "闷声发财",
     "icon": "./resources/logo1024.png",
     "version": "1.0.0",
     "slug": "Make A Fortune!",
