--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,12 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "max-len": [
+      "error",
+      {
+        "code": 120
+      }
+    ],
     "import/no-unresolved": 0,
     "react/jsx-filename-extension": [
       1,
