--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "闷声发财",
     "icon": "./resources/logo1024.png",
     "version": "1.0.0",
-    "slug": "Make A Fortune!",
+    "slug": "make-a-fortune",
     "ios": {
       "bundleIdentifier": "dev.skyzh.fortune",
       "buildNumber": "1.0.0"
