--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "private": true,
   "main": "src/App.tsx",
   "dependencies": {
+    "@expo/vector-icons": "^12.0.5",
     "@types/lodash": "^4.14.172",
     "expo": "~42.0.0",
     "lodash": "^4.17.21",
